# ollama-llm-builder

./: .env.example  .gitignore  CLAUDE.md  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: security-check.yml
config/: build_config.yaml  hardware_profiles.yaml
docs/: COMPLETE_WORKFLOW.md  GGUF_CONVERSION.md  OLLAMA_TAGS.md  README.md  SETUP.md  SMOLVLM2_VISION_ISSUES.md  TASKS.md
modelfiles/: SmolVLM2-F16.modelfile  SmolVLM2-Q4_K_M.modelfile  SmolVLM2-Q8_0.modelfile
scripts/: download_model.py  generate_modelfile.py
scripts/conversion/: __init__.py  convert_to_gguf.py
scripts/utils/: config_manager.py
